fixed text wrap on mobile headers

--- a/style.css
+++ b/style.css
@@ -444,7 +444,7 @@ img#modal-img {
 		font-size: 175%;
   }
 	.category > h1 {
-		width: 70%;
+		width: 90%;
 	}
 	
 	/* Modal */
